Modified keystore.encrypt and keystore.decrypt

--- a/package.json
+++ b/package.json
@@ -21,26 +21,18 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/bumoproject/bumo-encryption-js.git"
   },
   "keywords": [
     "bumo",
     "bumo-encryption"
   ],
   "bugs": {
-    "url": ""
+    "url": "https://github.com/bumoproject/bumo-encryption-js/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/bumoproject/bumo-encryption-js#readme",
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^5.2.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bumoproject/bumo-encryption-js.git"
-  },
-  "bugs": {
-    "url": "https://github.com/bumoproject/bumo-encryption-js/issues"
-  },
-  "homepage": "https://github.com/bumoproject/bumo-encryption-js#readme"
+  }
 }
